<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/mainColor"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/country_flags"
        android:layout_width="142dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_height="71dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/qurany_light"
                android:textSize="18sp"
                android:layout_weight="1.0"
                android:textColor="#00FF66"
                android:text="@string/card_cases"/>

            <TextView
                android:id="@+id/cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#F83F3F"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/qurany_light"
                android:textSize="18sp"
                android:layout_weight="1.0"
                android:textColor="#00FF66"
                android:text="@string/card_death"/>

            <TextView
                android:id="@+id/deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#F83F3F"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/qurany_light"
                android:textSize="18sp"
                android:layout_weight="1.0"
                android:textColor="#00FF66"
                android:text="@string/card_recovered"/>

            <TextView
                android:id="@+id/recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#F83F3F"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/qurany_light"
                android:textSize="18sp"
                android:layout_weight="1.0"
                android:textColor="#00FF66"
                android:text="TODAY CASES"/>

            <TextView
                android:id="@+id/today_cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#F83F3F"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/qurany_light"
                android:textSize="18sp"
                android:layout_weight="1.0"
                android:textColor="#00FF66"
                android:text="@string/card_today_DEATHS"/>

            <TextView
                android:id="@+id/today_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#F83F3F"
                android:text="0"/>

        </LinearLayout>

        <Button
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:padding="2dp"
            android:text="@string/close_str"
            android:layout_marginTop="25dp"
            android:textSize="13sp"
            android:textColor="@color/whiteColor"
            android:background="@drawable/button"/>



    </LinearLayout>



</LinearLayout>