<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/mainColor"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="TODAY'S UPDATE"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshData"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@color/mainColor"
        android:layout_height="match_parent">

        <ScrollView
            android:scrollbars="none"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardBackgroundColor="@color/cardColor"
        card_view:contentPaddingLeft="10dp"
        card_view:contentPaddingRight="10dp"
        card_view:contentPaddingTop="20dp"
        card_view:contentPaddingBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        card_view:cardElevation="5dp">

        <LinearLayout
            android:background="@color/cardColor"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:background="@color/cardColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/qurany_light"
                android:text="@string/card_cases"
                android:textColor="#00FF66"
                android:textSize="18sp" />

            <TextView
                android:background="@color/cardColor"
                android:id="@+id/cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"

                android:layout_marginTop="15dp"
                android:textColor="#F83F3F"
                android:textSize="44sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardBackgroundColor="@color/cardColor"
        card_view:contentPaddingLeft="10dp"
        card_view:contentPaddingRight="10dp"
        card_view:contentPaddingTop="20dp"
        card_view:contentPaddingBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        card_view:cardElevation="5dp">

        <LinearLayout
            android:background="@color/cardColor"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:background="@color/cardColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/qurany_light"
                android:text="@string/card_death"
                android:textColor="#00FF66"
                android:textSize="18sp" />

            <TextView
                android:background="@color/cardColor"
                android:id="@+id/deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginTop="15dp"
                android:textColor="#F83F3F"
                android:textSize="44sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:contentPaddingLeft="10dp"
        card_view:contentPaddingRight="10dp"
        card_view:contentPaddingTop="20dp"
        card_view:cardBackgroundColor="@color/cardColor"
        card_view:contentPaddingBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        card_view:cardElevation="5dp">

        <LinearLayout
            android:background="@color/cardColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:background="@color/cardColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/qurany_light"
                android:text="@string/card_recovered"
                android:textColor="#00FF66"
                android:textSize="18sp" />

            <TextView
                android:background="@color/cardColor"
                android:id="@+id/recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"

                android:layout_marginTop="15dp"
                android:textColor="#F83F3F"
                android:textSize="44sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
        <LinearLayout
            android:gravity="center_horizontal|bottom"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"

                android:textSize="11sp"
                android:text="Developed by Unity Developers"
                />

        </LinearLayout>

    </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>


